@@ -1,3 +1,4 @@
+* #2486 In the intro screen name page enter goes to next page. (marco)
 * #2570 Accept correctly image drops from Record.
 * Add Greek translation. (simosx)
 * #2564 Use the activity service name as the base name for translation files.
